Change font to Geist

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,4 +73,8 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  .notes {
+    @apply bg-card text-card-foreground absolute text-sm w-1/5 right-0 top-0 p-4 bg-transparent/25 text-white;
+  }
 }
