--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,3 +78,8 @@
     @apply bg-card text-card-foreground absolute text-sm w-full md:w-1/2 lg:w-1/4 right-0 top-0 p-4 bg-transparent/25 text-white text-left;
   }
 }
+
+.overlay {
+  border-image: linear-gradient(hsl(0 100% 0% / 0.6), hsl(0 100% 0% / 0.6)) fill
+    1;
+}
