--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,7 +75,7 @@
   }
 
   .notes {
-    @apply bg-card text-card-foreground absolute text-sm w-full md:w-1/2 lg:w-1/4 right-0 top-0 p-4 bg-transparent/25 text-white text-left;
+    @apply bg-card text-card-foreground absolute text-sm w-full md:w-1/2 right-0 top-0 p-4 bg-transparent/70 text-white text-left;
   }
 }
 
